--- a/03_julia.tex
+++ b/03_julia.tex
@@ -24,6 +24,8 @@ A consequence of the non backward compatibility is that when you search the inte
 
 Since Julia is an open source and free program to use, one of its strengths is that developers can contribute by creating useful programs that they share with all the other users. One example of this is the Integrated Development Environment (IDE), \cite{JunoIDE}. Juno is a program to help writing Julia code easier and is created by mainly two developers, Sebastian Pfitzner and Mike J. Innes. Juno gives the coder an environment where it is easy to run your Julia code, you get auto completion when writing your code, it has built in plotting panes to visualize results, and much more. The program is open source and free to use, and if you look at \cite{JunoGithub} there are many other contributors to the IDE than only Pfitzner and Innes. These are developers that have either found an error in the existing code or made a feature they wanted for the IDE. This shows the strength of the code being open source -- the community can contribute to the code database. This will help finishing improvements and error corrections to the code database quicker. This is why v1.0 of Julia was such a milestone, because as soon as Julia has guaranteed backward compatibility, there is a lot easier for developers to justify spending time to develop programs for Julia. This is because the developers now know that the work they put in writing Julia code, will not be in vain, as the code will work on all future releases of Julia. 
 
+\section{Code examples}
+
 \section{Metaprogramming in Julia}
 \label{sec:Metaprogramming}
 In the last year there have been published numerous projects that makes coding in Julia easier. A lot of these projects exploit that Julia is a dynamic language and that it has metaprogramming. In the blog post from \cite{juliaBlogRelease2012} the creators says that Julia shall contain true macros like the programming language Lisp \emph{\citep{Lisp}}. Macros are functions that are using metaprogramming to modify your existing code to give extra functionality. The macro functions in Julia are easily recognized by an "@" in front of the function name. To use a macro function on any function, you simply call the macro function before the original function call. I will now show three examples of macro functions in Julia that are very useful when creating numerical simulations.
