--- a/04_implementation.tex
+++ b/04_implementation.tex
@@ -1,12 +1,10 @@
 \chapter{Implementation}
 \label{ch:Implementation}
-\todo[inline]{intro her må endres da deler av Julia-forklaringen er flyttet utenfor.}
-In this chapter, I will discuss why it is interesting to implement AD in Julia. I will also give some implementation-specific details and benchmark the implementation against other AD libraries in Julia and MATLAB.
+This chapter will give implementation-specific details on how to implement AD in Julia and perform benchmarks against other AD libraries in both Julia and MATLAB.
 
 \section{Automatic Differentiation in Julia}
 \label{sec:ADInJulia}
-As discussed in \autoref{ch:Julia}, Julia seems to be the perfect language for numerical applications and it would be interesting to see how it performs compared to MATLAB.
-When it comes to AD in Julia, there are already some packages that can be used. Most of them are backward AD-packages designed for machine learning, for example AutoGrad \citep{knet2016mlsys} and Zygote \citep{innes2018don}. The reason why AD-packages for machine learning are based on backward AD is that machine learning, without going to deep into the subject, largely amounts to the minimization of functions with a large number of input parameters, but with only one output parameter. As discussed in \autoref{sec:BackwardAD}, backward AD is much more efficient than forward AD in these types of evaluations. For numerical applications there is usually many input parameters and output parameters. Hence there is no clear advantage of using backward AD compared to forward AD. 
+As discussed in \autoref{ch:Julia}, Julia seems to be the perfect language for numerical applications and it would be interesting to see how it performs compared to MATLAB. There are already some third-party AD packages in Julia that can be used. Most of them are backward AD-packages designed for machine learning, for example AutoGrad \citep{knet2016mlsys} and Zygote \citep{innes2018don}. The reason why AD-packages for machine learning are based on backward AD is that machine learning, without going to deep into the subject, largely amounts to the minimization of functions with a large number of input parameters, but with only one output parameter. As discussed in \autoref{sec:BackwardAD}, backward AD is much more efficient than forward AD in these types of evaluations. For numerical applications there is usually many input parameters and output parameters. Hence there is no clear advantage of using backward AD compared to forward AD. 
 
 There is one package called \textit{ForwardDiff} \citep{ForwardDiff} being developed by the Julia community that uses forward AD. ForwardDiff relies on dual numbers as explained in \autoref{sec:DualNumbers} extended to multiple dimensions. This is called multidimensional dual numbers and a vector \textbf{x} of length $n$ is represented as
 \begin{align*}
@@ -61,7 +59,7 @@ In mathematical programming languages like MATLAB and Julia, there is a differen
 The .* operator, on the other hand, represents element-wise multiplication. This means that if we have regular column vectors like $u$ and $w = v'$, where $w$ is the transpose of $v$, the evaluation of $u.*w$ will be element-wise multiplication of $u$ and $w$, into a new vector of the same dimensions as $u$ and $w$. Here, one needs to make a choice in the implementation of multiplication and division for AD in Julia, because as of now, there are no good ways of overloading any dot operators for custom types such as AD. \emph{\citet{JuliaIssueDot}} explains the problems of overloading the element-wise .* operator, and states that there is no good way of actually doing this. The issue has still not been resolved. With this in mind, and that there will only be used element-wise multiplication in this project, I have decided that I herein redefine * and implement it as element-wise multiplication. This means that if I have written regular multiplication expressions consisting of at least one AD-variable, element-wise multiplication will be executed.
 
 \subsection{Optimizing \texttt{ForwardAutoDiff}}
-By looking closer at the implementation of the Jacobian in \texttt{FAD}, we can find that in some cases there are better approaches to storing the Jacobian that will gain computational efficiency. Before looking closer at the specific situations, I will explain how the sparse matrix type, \texttt{SparseMatrixCSC}, that \texttt{FAD} uses is built up and how it works. \texttt{SparseMatrixCSC} stands for \textit{Compressed Sparse Column Sparse Matrix Storage} and according to Julia docs \emph{\citep{SparseMatrixCSC}} the SparseMatrixCSC struct is given as
+By looking closer at the implementation of the Jacobian in \texttt{FAD}, we can find that in some cases there are better approaches to storing the Jacobian that will gain computational efficiency. Before looking closer at the specific situations, I will explain how the sparse matrix type, \texttt{SparseMatrixCSC}, that \texttt{FAD} uses is built up and how it works. \texttt{SparseMatrixCSC} stands for \textit{Compressed Sparse Column Sparse Matrix Storage} which is a standard format for storing spare matrices \emph{\citep{doi:10.1137/1.9780898718003.ch3}}. According to Julia docs \emph{\citep{SparseMatrixCSC}} the SparseMatrixCSC struct is given as
 \lstinputlisting{code/SparseMatrixCSCStruct.jl}
 It represents a matrix with three vectors and two integers. The integers represent the size of the matrix and the three vectors represent all non-zero elements in the matrix. To explain how the vectors work, consider the example of a matrix \textbf{A} with the corresponding \texttt{SparseMatrixCSC} struct variables:
 \begin{multicols}{2}
@@ -214,9 +212,7 @@ When both Jacobians are general sparse matrices, \texttt{CJAD} and \texttt{FAD} 
 \lstinputlisting{code/vectorAsMatrixTimesSparseJac.jl}
 I will call this method the \textit{matrix-multiplication} method. The second method keeps the vector form and uses element-wise multiplication between the vector and the \texttt{SparseMatrixCSC} matrix:
 \lstinputlisting{code/vectorTimesSparseJac.jl}
-I will call this the \textit{dot-multiplication} method. As it is difficult to say without first-hand knowledge of the implementation of \texttt{SparseMatrixCSC} which method is best to implement, I will test the two methods against each other. 
-\todo{Klarte ikke å finne grunnen til dette ved å se i kildekode. Kanskje noen på SINTEF vet hvorfor?}
-To this end, I have created a random vector of length 40 and a random sparse matrix of size $40\times 40$ having 20 percent nonzero elements. I then perform the element-wise multiplication 10 000 times to separate the efficiency of the two methods. To check which method is actually more efficient, and by how much, we can use the \textit{@btime} macro function from the \emph{\cite{BenchmarkTools}} library. This function gives us the number of allocations, the amount of memory used, and the time spent.
+I will call this the \textit{dot-multiplication} method. As it is difficult to say without first-hand knowledge of the implementation of \texttt{SparseMatrixCSC} which method is best to implement, I will test the two methods against each other. To test this, I have created a random vector of length 40 and a random sparse matrix of size $40\times 40$ having 20 percent nonzero elements. I then perform the element-wise multiplication 10 000 times to separate the efficiency of the two methods. To check which method is actually more efficient, and by how much, we can use the \textit{@btime} macro function from the \emph{\cite{BenchmarkTools}} library. This function gives us the number of allocations, the amount of memory used, and the time spent.
 \autoref{tab:VectorMatrixMultiplicationSmallMatrix} reports the results\footnote{All benchmarks in this project are performed on a MacBook Pro (Retina, 13-inch, Late 2013), 2,8 GHz Intel Core i7 processor and 16 GB 1600 MHz DDR3 memory.} of this test.
 \begin{table}[H]
     \centering
@@ -245,8 +241,7 @@ The test is unequivocal:  the \textit{dot-multiplication} method has far less al
          \hline
     \end{tabular}
 \end{table}
-The dot-multiplication method still requires far less allocations, but now consumes a lot more memory than the \textit{matrix-multiplication} method. As a consequence, it is almost 100 times slower than the matrix-multiplication method! This shows that for the purpose of this project, the matrix-multiplication method is a much better choice of implementation.
-
+The dot-multiplication method still requires far less allocations, but now consumes a lot more memory than the \textit{matrix-multiplication} method. As a consequence, it is almost 100 times slower than the matrix-multiplication method! This shows that for the purpose of this implementation, the matrix-multiplication method is a much better choice.
 
 \subsection{Efficient Versus Readable and Elegant Code}
 There is usually a fine balance between writing efficient and readable/elegant code. Sometimes you have the opportunity to do both, but often you have to choose which of them you want to give most focus. At the end of \autoref{sec:FAD}, I explained how we can elegantly implement the \texttt{sum} function, and all other built-in functions that iterate through the \texttt{FAD}-variables, only by implementing the \texttt{iterate} function. This is a very elegant use of Julia's multiple dispatch system, as we get a lot of functionality "for free". The downside, however, is that we loose potential computational efficiency that we could achieve by implementing the \texttt{sum} function ourselves. Let us define a random function $\psi$, where the AD-representation and the \texttt{sum} of $\psi$ are given by
