--- a/05_flow_solver_with_AD.tex
+++ b/05_flow_solver_with_AD.tex
@@ -156,7 +156,7 @@ The difference in implementation of the Jacobian should make a big impact on the
          $30\times30\times30$ & ~ & 158.5s & 133.5s & 133.6s \\ \hline
     \end{tabular}
 \end{table}
-For 10 cells in each spatial direction it is clear that what I assumed based on the structure of the Jacobian in \autoref{fig:flowSolverJacobian} is true; The  \texttt{ForwardDiff} method takes much longer time than  \texttt{FAD}, \texttt{CJAD}  and \texttt{MRST}. Since  \textit{ForwardDiff} already spends over a minute for $10\times 10\times 10$ cells, it is omitted for finer discretizations. \texttt{MRST\_diagonal} is not presented here because there is a bug that cause the method to fail for this specific example. \todo{Finne ut hva dette er slik at det får kjørt?} According to the results in \autoref{tab:FlowSolverSpeedTest}, \texttt{MRST} is a bit faster than  \texttt{FAD}, but \texttt{CJAD} and \texttt{MRST} are very similar. 
+For 10 cells in each spatial direction it is clear that what I assumed based on the structure of the Jacobian in \autoref{fig:flowSolverJacobian} is true; The  \texttt{ForwardDiff} method takes much longer time than  \texttt{FAD}, \texttt{CJAD}  and \texttt{MRST}. Since  \textit{ForwardDiff} already spends over a minute for $10\times 10\times 10$ cells, it is omitted for finer discretizations. \texttt{MRST\_diagonal} is not presented here because there is a bug that cause the method to fail for this specific example. According to the results in \autoref{tab:FlowSolverSpeedTest}, \texttt{MRST} is a bit faster than  \texttt{FAD}, but \texttt{CJAD} and \texttt{MRST} are very similar. 
 
 It is, although, still some uncertainty in these numbers as we do not know if the linear solver in MATLAB and Julia perform equally well. In addition, another factor that can effect the result is that for the current hardware these benchmarks are running on, the computations are so demanding that the hardware becomes warm. This can cause the performance of the hardware to decrease and ruin the test results. To remove the uncertainty of both the linear solver and the hardware heating up, we can perform another benchmark. Instead of solving the linear system \texttt{f.jac\textbackslash f.val} and continuing to the next Newton-Raphson iteration until it converges and then onto a new time step, we only assemble the first residual function multiple times. In this way we only benchmark the AD part of the problem. The test is still relevant as the structure of each function will be equal for all time steps, only that there will be other values. And since the time the computer uses to calculate the residual function value and Jacobian will not depend on what type of numbers we have, but only on the structure of matrices in the Jacobians. Since the structure is the same throughout the whole simulation this benchmark will still be relevant to figure out which AD-implementation is best to solve this specific problem. \autoref{tab:FlowSolverAssemblyTest} shows the three methods assembling the first residual function of the simulation 100 times.
 \begin{table}[htb]
@@ -173,6 +173,3 @@ It is, although, still some uncertainty in these numbers as we do not know if th
     \end{tabular}
 \end{table}
 It shows the same tendency as \autoref{tab:FlowSolverSpeedTest}, where \texttt{CJAD} and \texttt{MRST} are considerable faster than \texttt{FAD}. However, in this benchmark \texttt{MRST} is a bit faster than \texttt{CJAD} for the highest number of cells. There are however small differences and since there are some uncertainty in benchmarking computational speed on computers, a safe conclusion is that for this "Single-Phase Compressible AD Solver" example, the \texttt{MRST}- and \texttt{CJAD} implementation perform equally good.
-
-
-\todo[inline]{Se om det går an å bruke dette kapittelet som en overgang til lokal AD.}
