--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -309,3 +309,14 @@ eprint = {
   doi =		 {10.2118/72469-PA},
   publisher =	 {Society of Petroleum Engineers}
 }
+
+@inbook{doi:10.1137/1.9780898718003.ch3,
+author = {Saad, Y.},
+title = {Iterative Methods for Sparse Linear Systems},
+chapter = {3. Sparse Matrices},
+year = {2003},
+pages = {73-101},
+doi = {10.1137/1.9780898718003.ch3},
+URL = {https://epubs.siam.org/doi/abs/10.1137/1.9780898718003.ch3},
+eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9780898718003.ch3}
+}
