--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -309,7 +309,6 @@ eprint = {
   doi =		 {10.2118/72469-PA},
   publisher =	 {Society of Petroleum Engineers}
 }
-
 @inbook{doi:10.1137/1.9780898718003.ch3,
 author = {Saad, Y.},
 title = {Iterative Methods for Sparse Linear Systems},
@@ -319,4 +318,10 @@ pages = {73-101},
 doi = {10.1137/1.9780898718003.ch3},
 URL = {https://epubs.siam.org/doi/abs/10.1137/1.9780898718003.ch3},
 eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9780898718003.ch3}
+}
+@inproceedings{lauser2018local,
+  title={Local Forward-Mode Automatic Differentiation For High Performance Parallel Pilot-Level Reservoir Simulation},
+  author={Lauser, A and Rasmussen, AF and Sandve, TH and Nilsen, HM},
+  booktitle={ECMOR XVI-16th European Conference on the Mathematics of Oil Recovery},
+  year={2018}
 }
