--- a/03_julia.tex
+++ b/03_julia.tex
@@ -17,19 +17,20 @@ The next translation difference between the languages is whether it is compiled 
 \subsection{Languages for Numerical applications}
 For numerical applications we can separate the most commonly used languages into two groups. The first group is static and compiled languages like C and C++. These are languages that execute very fast but the time it takes to make the programs are longer. The second group are dynamic and interpreted languages like the well known MATLAB\footnote{In 2015 MATLAB introduced a new execution engine that uses JIT compilation \emph{\citep{MatlabJIT}}. However, MATLAB is still a dynamic language that function like a fully interpreted language.} and Python. These languages are easier to use if you want to create numerical simulations, but they execute slower than C and C++. Julia is a dynamic, but (JIT)compiled language. As the creators said in the blog post from 2012: Julia is supposed to have "(...) familiar mathematical notation like Matlab", be "(...) as  powerful  for  linear  algebra  as Matlab(...)" and at the same time be as fast as C. Summed up their goal has been to make a language that is as easy to use as an interpreted and dynamic language, but with the speed of a compiled and static language. Based on this description, Julia seems to be the perfect language for numerical simulations.
 
-\subsection{Syntax in different Coding Languages}
-So far in this chapter, I have discussed what separates the languages in regards to type checking and how the source code is translated to machine code. These differences will in return effect the syntax of the languages. Below I have an example illustrating the differences in syntax in 
-\todo[inline]{Mulig dette eksempelet ikke er så godt.}
+\subsection{Code Example}
+So far in this chapter, I have discussed what separates the languages in regards to type checking and how the source code is translated to machine code. These differences will in return effect the syntax of the languages and how we can write the source code. Below I have an example illustrating the differences in implementation of an example for Julia, MATLAB and C++. The example consist of writing a program that creates two random vectors of length $n$, element-wise multiply them together and print the resulting vector in a readable way. This example is first implemented in Julia, where the random vector is created using \texttt{rand(n)}, the element-wise multiplication is performed with the operator \texttt{.*} and printing the result with the \texttt{println(...)} function:
 \lstinputlisting{code/dot_product.jl}
+Very similar to the Julia implementation we have the implementation from MATLAB:
 \lstinputlisting{code/dot_product.m}
+The implementations only have couple of small syntax differences, and they both implement the example very efficiently with few lines. C++ on the other side is not created specifically for mathematical programming and without importing any libraries, the implementation of the example becomes much more 
 \lstinputlisting{code/dot_product.cpp}
-
+\todo[inline]{Mulig dette eksempelet ikke er så godt.}
 \section{History of Julia}
 The process of creating a new programming language is however long. In 2009 the creators began the project of creating Julia and in the blog post \emph{\citep{juliaBlogRelease2012}} from 2012 they said "It’s not complete, but it’s time for a 1.0 release — the language we’ve created is called Julia". In a new blog post from August 8th 2018 \emph{\citep{juliaBlogReleaseV1.0}}, where they released the actual version 1.0 they admitted that they had jumped the gun a little with the mentioning of v1.0 in 2012, as it took more than six years before it actually happened. But after almost ten years of development v1.0 of the Julia language was released. The major consequence of a 1.0 release is that from this version and on, they guarantee backward compatibility. When they did not guarantee backward compatibility, code that worked on version, 0.1, 0.2 etc. would not necessarily run on newer versions of Julia. But from v1.0, all code that run on this version, will also run on future releases. This was a huge milestone for the Julia language. 
 
 A consequence of the non backward compatibility is that when you search the internet for help in Julia, currently less than one year after the v1.0 release, you could end up finding solutions to your problem that no longer works. Hence as of now you need to be careful and check the date of the answers, and keep in mind that if it is from before v1.0 it might no longer work. This can at some times be frustrating, especially when you try to learn the language. However, now that there is backward compatibility for future releases, as time goes by, this problem will disappear as pre-v1.0 answers will eventually drown by post v1.0 answers.
 
-Since Julia is an open source and free program to use, one of its strengths is that developers can contribute by creating useful programs that they share with all the other users. One example of this is the Integrated Development Environment (IDE), \cite{JunoIDE}. Juno is a program to help writing Julia code easier and is created by mainly two developers, Sebastian Pfitzner and Mike J. Innes. Juno gives the coder an environment where it is easy to run your Julia code, you get auto completion when writing your code, it has built in plotting panes to visualize results, and much more. The program is open source and free to use, and if you look at \cite{JunoGithub} there are many other contributors to the IDE than only Pfitzner and Innes. These are developers that have either found an error in the existing code or made a feature they wanted for the IDE. This shows the strength of the code being open source -- the community can contribute to the code database. This will help finishing improvements and error corrections to the code database quicker. This is why v1.0 of Julia was such a milestone, because as soon as Julia has guaranteed backward compatibility, there is a lot easier for developers to justify spending time to develop programs for Julia. This is because the developers now know that the work they put in writing Julia code, will not be in vain, as the code will work on all future releases of Julia. 
+Since Julia is an open source and free program to use, one of its strengths is that developers can contribute by creating useful programs that they share with all the other users. One example of this is the Integrated Development Environment (IDE), \cite{JunoIDE}. Juno is a program to help writing Julia code easier and is created by mainly two developers, Sebastian Pfitzner and Mike J. Innes. Juno gives the coder an environment where it is easy to run your Julia code, you get auto completion when writing your code, it has built in plotting panes to visualize results, and much more. The program is open source and free to use, and if you look at \cite{JunoGithub} there are many other contributors to the IDE other than Pfitzner and Innes. These are developers that have either found an error in the existing code or made a feature they wanted for the IDE. This shows the strength of the code being open source -- the community can contribute to the code database. This will help finishing improvements and error corrections to the code database quicker. This is why v1.0 of Julia was such a milestone, because as soon as Julia has guaranteed backward compatibility, there is a lot easier for developers to justify spending time to develop programs for Julia. This is because the developers now know that the work they put in writing Julia code, will not be in vain, as the code will work on all future releases of Julia. 
 
 \section{Metaprogramming in Julia}
 \label{sec:Metaprogramming}
